# scheme-vm

./: .editorconfig  .gitignore  .rubocop.yml  .watchr  Cargo.toml  Gemfile  README.md  build.rs  compiler.rb  loader.rb  parser.rb  pattern.rb  program.rb  test.rb  todo.md  vm.rb  vm_spec.rb
.circleci/: config.yml
compiler/: import.rb  import_binding.rb  libraries.rb  macro.rb  optimizer.rb  pattern.rb
examples/: fib.scm
lib/: assert.scm  base.scm  begin.scm  bool.scm  cond.scm  do.scm  let.scm  list.scm  logic.scm  pair.scm  pattern.rb  range.scm  string.scm
lib/scheme/: base.scm  process-context.scm  write.scm
spec/: class_spec.rb  compiler_spec.rb  fibonacci_spec.rb  instructions_spec.rb  lib_spec.rb  macro_spec.rb  parser_spec.rb  pattern_spec.rb  program_spec.rb  spec_helper.rb  vm_spec.rb
spec/compiler/: pattern_spec.rb
spec/examples/: fib_spec.rb
spec/fixtures/: bad-macro.scm  include-test.scm  library-test.scm
spec/lib/: apply-spec.scm  bool-spec.scm  bool_spec.rb  case-spec.scm  char-spec.scm  cond-spec.scm  continuation-spec.scm  define-spec.scm  do-spec.scm  equal-spec.scm  equality-spec.scm  if-when-unless-spec.scm  import-spec.scm  lambda-spec.scm  let-spec.scm  letrec-spec.scm  (+13 more)
src/: atom.rs  lib.rs  lisp.pest  lisp.rs  lisp.rustpeg  quotes.rs  rb.rs  tests.rs  values.rs
vm/: atom.rb  bool_false.rb  bool_true.rb  byte_array.rb  call_stack_printer.rb  char.rb  continuation.rb  debug_output.rb  empty_list.rb  exceptions.rb  gc.rb  int.rb  list_node.rb  operations.rb  pair.rb  pretty_print.rb  source_code_error_printer.rb  unspecified.rb
(+5 files in other folders)
